--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -86,8 +86,9 @@ hr {
   height: 100%;
   /* Sidebar links */
 }
-.sidebar i {
+.sidebar .sidebar-icon {
   display: block;
+  margin: 0 auto;
 }
 .sidebar a {
   font-size: 13px;
@@ -114,10 +115,11 @@ hr {
 }
 
 /* On screens that are less than 700px wide, make the sidebar into a topbar */
-@media screen and (max-width: 888px) {
+@media screen and (max-width: 768px) {
   .sidebar {
     width: 100%;
-    height: 60px;
+    height: auto;
+    max-height: 60px;
     position: fixed;
     top: 0;
     left: 0;
@@ -128,17 +130,26 @@ hr {
   }
   .sidebar a {
     flex-grow: 1;
+    display: inline-flex;
+    justify-content: center;
     align-items: center;
-    padding: 20px;
+    text-align: center;
+    padding: 5px;
   }
-  .sidebar i,
-  .sidebar img {
+  .sidebar .sidebar-icon {
     margin-bottom: 0;
     display: none;
   }
   .content {
     margin-top: 80px;
     margin-left: 0;
+  }
+  #home,
+  #about,
+  #portfolio,
+  #contact {
+    width: 80%;
+    padding: 0 15px;
   }
 }
 .equal-height {
