--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -80,8 +80,9 @@ hr {
   background-color: rgb(34, 34, 34);
   position: fixed;
   height: 100%;
-  i {
+  .sidebar-icon {
     display: block;
+    margin:0 auto;
   }
   /* Sidebar links */
   a {
@@ -112,10 +113,11 @@ hr {
 }
 
 /* On screens that are less than 700px wide, make the sidebar into a topbar */
-@media screen and (max-width: 888px) {
+@media screen and (max-width: 768px) {
   .sidebar {
     width: 100%;
-    height: 60px;
+    height:auto;
+    max-height: 60px;
     position: fixed;
     top: 0;
     left: 0;
@@ -125,20 +127,29 @@ hr {
     align-items: center;
     a {
       flex-grow: 1;
+      display:inline-flex;
+      justify-content: center;
       align-items: center;
-      padding: 20px;
+      text-align: center;
+      padding: 5px;
     }
-    i,
-    img {
+    .sidebar-icon {
       margin-bottom: 0;
       display: none;
     }
   }
-
   .content {
     margin-top: 80px;
     margin-left: 0;
   }
+  #home,
+  #about,
+  #portfolio,
+  #contact {
+    width: 80%;
+    padding: 0 15px;
+  }
+
 }
 
 .equal-height {
