--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -117,7 +117,7 @@ hr {
   .sidebar {
     width: 100%;
     height:auto;
-    max-height: 60px;
+ 
     position: fixed;
     top: 0;
     left: 0;
@@ -146,8 +146,8 @@ hr {
   #about,
   #portfolio,
   #contact {
-    width: 80%;
-    padding: 0 15px;
+    width: 95%;
+    padding: 50px 15px;
   }
 
 }
