--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -119,7 +119,6 @@ hr {
   .sidebar {
     width: 100%;
     height: auto;
-    max-height: 60px;
     position: fixed;
     top: 0;
     left: 0;
@@ -148,8 +147,8 @@ hr {
   #about,
   #portfolio,
   #contact {
-    width: 80%;
-    padding: 0 15px;
+    width: 95%;
+    padding: 50px 15px;
   }
 }
 .equal-height {
