--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,4 +1,7 @@
-body {
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
   background-color: black;
   color: rgb(117, 117, 117);
   font: 400 15px/1.8 Lato, sans-serif;
@@ -83,6 +86,8 @@ hr {
   width: 120px;
   background-color: rgb(34, 34, 34);
   position: fixed;
+  left: 0;
+  z-index: 20;
   height: 100%;
   /* Sidebar links */
 }
@@ -118,16 +123,18 @@ hr {
 @media screen and (max-width: 768px) {
   .sidebar {
     width: 100%;
-    height: auto;
+    height: 30px;
     position: fixed;
     top: 0;
     left: 0;
+    right: 0;
     z-index: 1000;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
   }
   .sidebar a {
+    padding: 5px;
     flex-grow: 1;
     display: inline-flex;
     justify-content: center;
@@ -146,8 +153,8 @@ hr {
   #about,
   #portfolio,
   #contact {
-    width: 95%;
-    padding: 50px 15px;
+    width: 90%;
+    padding: 50px 10px;
   }
 }
 .equal-height {
