--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,12 +1,7 @@
-html,body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
+body {
   background-color: black;
   color: rgb(117, 117, 117);
-  font:
-    400 15px/1.8 Lato,
-    sans-serif;
+  font: 400 15px/1.8 Lato, sans-serif;
 }
 h1,
 h2 {
@@ -152,8 +147,8 @@ hr {
   #about,
   #portfolio,
   #contact {
-    width: 90%;
-    padding: 50px 10px;
+    width: 85%;
+    padding: 50px 20px;
   }
 
 }
