--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -130,6 +130,7 @@ hr {
     align-items: center;
   }
   .sidebar a {
+    height: 100%;
     padding: 5px;
     flex-grow: 1;
     display: inline-flex;
