--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -125,6 +125,7 @@ hr {
     justify-content: space-evenly;
     align-items: center;
     a {
+      height:100%;
       padding: 5px;
       flex-grow: 1;
       display:inline-flex;
